Fix "Returns: (skip)" method calls without (out) arguments

When we have a method call with a skipped return value, but no other out
arguments, we previously returned NULL to Python, which causes "SystemError:
error return without exception set". Return None instead.

https://bugzilla.gnome.org/show_bug.cgi?id=662383